- [DS-543] Harvest not internationalized

(Serhij Dubyk)
- [DS-500] Ukrainian for DSpace 1.6.0

(Andrea Bollini)
 - [DS-513] Connection leak in SWORD authentication process 
 - [DS-581] DIDL doesn't respect the hidden fields and the oai_dc metadata section is different than the simple oai_dc implementation
 - [DS-580] DIDL format include HTML element if the item has no files

(Caryn Neiswender)
 - [DS-518] Duplicate listing of dependencies in dspace-sword/pom.xml

(Keith Gilbertson)
 - [DS-123] xmlui browse in empty collection displays "Now showing items 1-0" of 0 - incorrect numbering
 - [DS-508] Attachment spelled as attachement in DailyReportEmailer
 - [DS-539] Misspelled attribute in MODS/METS output

(Stuart Lewis)
 - [DS-242] Special groups shown for logged in user rather than for user being examined
 - [DS-506] embargo-lifter command missing from launcher.xml
 - [DS-526] ItemUpdate - script update
 - [DS-572] Batch metadata editor fails to notice change of item's owning collection

(Mark Wood)
 - [DS-469] DCDate.displayDate(false,*) displays only year
 
 (Ivan Masar)
 - [DS-515] Czech localization of 1.5.2

(Ben Bosman)
 - [DS-579] Required fields in submissions display wrong error message
 - [DS-538] restricted items are being returned in OAI GetRecord method while using harvest.includerestricted.oai
 - [DS-493] Url in browser is incorrect after login

1.6.0 final
===========

(Alexey Maslov)
 - [DS-289] OAI-PMH + OAI-ORE harvesting support

(Kim Shepherd)
 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete
 - [DS-251] Bulk Metadata Editing: XMLUI aspect and forms
 - [DS-363] JSPUI statistics views
 - [DS-406] View Statistics button does not work in item page